[gd_scene load_steps=22 format=2]

[ext_resource path="res://Fonts/Itim-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Selector.gd" type="Script" id=2]
[ext_resource path="res://Sounds/toggle_002.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/confirmation_002.ogg" type="AudioStream" id=4]
[ext_resource path="res://Menus/Start.gd" type="Script" id=5]
[ext_resource path="res://Menus/Multiplayer.gd" type="Script" id=6]
[ext_resource path="res://Menus/Settings.gd" type="Script" id=7]
[ext_resource path="res://Menus/Quit.gd" type="Script" id=8]
[ext_resource path="res://Menus/SettingsMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Menus/Controls.tscn" type="PackedScene" id=10]
[ext_resource path="res://Shaders/nebula.shader" type="Shader" id=13]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
seamless = true
noise = SubResource( 1 )

[sub_resource type="OpenSimplexNoise" id=3]

[sub_resource type="NoiseTexture" id=4]
seamless = true
noise = SubResource( 3 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 13 )
shader_param/scroll1 = Vector2( 0.2, -0.01 )
shader_param/scroll2 = Vector2( 0.02, 0.02 )
shader_param/noise1 = SubResource( 2 )
shader_param/noise2 = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 70
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

void fragment()
{
    float speed = 3.0,
          time = TIME * speed,
          radius = 0.4 + 0.04 * sin(time),
          thickness = 0.09 + 0.05 * cos(time),
          dist = distance(vec2(UV.x, UV.y), vec2(0.5,0.5));
    COLOR = vec4(smoothstep(thickness/2., 0., abs(dist-radius)));
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackgroundEffect" type="ColorRect" parent="ColorRect"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 12
size_flags_vertical = 12
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 511.0
margin_top = 303.0
margin_right = 1089.0
margin_bottom = 596.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Title" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 578.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 6 )
text = "nebulasteroids"
uppercase = true

[node name="MenuEntries" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 578.0
margin_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1

[node name="Pull" type="Node2D" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
visible = false

[node name="PullTex" type="ColorRect" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pull"]
material = SubResource( 8 )
margin_right = 477.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pull"]

[node name="Selector" type="ReferenceRect" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
visible = false
margin_top = 4.0
margin_right = 477.0
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
border_color = Color( 0.270588, 0.639216, 0.529412, 1 )
border_width = 4.0
editor_only = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuMovement" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries/Selector"]
stream = ExtResource( 3 )
bus = "GUI"

[node name="MenuSelection" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries/Selector"]
stream = ExtResource( 4 )
bus = "GUI"

[node name="Start" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
margin_right = 578.0
margin_bottom = 48.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 9 )
text = "Start"
align = 1
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
margin_top = 52.0
margin_right = 578.0
margin_bottom = 100.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 9 )
text = "How to play"
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
margin_top = 104.0
margin_right = 578.0
margin_bottom = 152.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 9 )
text = "Settings"
align = 1
valign = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
margin_top = 156.0
margin_right = 578.0
margin_bottom = 204.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 10 )
text = "Quit"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="SettingsMenu" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Controls" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="resized" from="ColorRect" to="ColorRect/MarginContainer/VBoxContainer/MenuEntries/Selector" method="_on_ColorRect_resized"]
[connection signal="gui_input" from="ColorRect/MarginContainer/VBoxContainer/MenuEntries" to="ColorRect/MarginContainer/VBoxContainer/MenuEntries/Selector" method="_on_MenuEntries_gui_input"]
